<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">
    <RelativeLayout
        android:id="@+id/mainContainer"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/addressContainer"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"

                android:textSize="24sp">
            </TextView>
            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated_at"
                android:textSize="12sp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/overviewContainer"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/status"
                android:textSize="18sp"
                android:text="@string/status"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/temp"
                android:textSize="90sp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/temp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/temp_min"
                    android:text="@string/minimum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <Space android:layout_width="50dp" android:layout_height="wrap_content">
                </Space>

                <TextView
                    android:id="@+id/temp_max"
                    android:text="@string/maximum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>


            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/detailsContainer"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:layout_width="0dp"
                        android:background="#909090"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/sunrise"
                            app:tint="@color/black">

                        </ImageView>
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp">
                        </Space>
                        <TextView
                            android:textSize="12sp"
                            android:text="@string/sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
                        <TextView
                            android:id="@+id/sunrise"
                            android:textSize="14sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time">
                        </TextView>

                    </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:background="#909090"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        app:tint="@color/black">

                    </ImageView>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>
                    <TextView
                        android:textSize="12sp"
                        android:text="@string/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:id="@+id/sunset"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time">
                    </TextView>

                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:background="#909090"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/wind"
                        app:tint="@color/black">

                    </ImageView>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>
                    <TextView
                        android:textSize="12sp"
                        android:text="@string/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:id="@+id/wind"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time">
                    </TextView>

                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>

            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp">
            </Space>
            <LinearLayout
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:background="#909090"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        app:tint="@color/black">

                    </ImageView>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>
                    <TextView
                        android:textSize="12sp"
                        android:text="@string/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:id="@+id/pressure"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time">
                    </TextView>

                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:background="#909090"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        app:tint="@color/black">

                    </ImageView>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>
                    <TextView
                        android:textSize="12sp"
                        android:text="@string/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:id="@+id/humidity"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time">
                    </TextView>

                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:background="#909090"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/info"
                        app:tint="@color/black">

                    </ImageView>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>
                    <TextView
                        android:textSize="12sp"
                        android:text="@string/created_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:id="@+id/info"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ivan">
                    </TextView>

                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>

            </LinearLayout>



            </LinearLayout>



    </RelativeLayout>

    <ProgressBar

        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ProgressBar>
    <TextView
        android:id="@+id/errortext"
        android:layout_centerInParent="true"
        android:text="@string/something_went_wrong"
        android:textSize="24sp"
        android:visibility="gone"


        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>



</RelativeLayout>